fix spacing on me main, services and add favicons

--- a/bootstrap/style.scss
+++ b/bootstrap/style.scss
@@ -30,7 +30,7 @@ nav {
     display: inline-block;
     padding: 3px 6px;
     font-size: 17px;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 700;
     background-color: #403368;
     border-radius: 0px 6px;
@@ -164,8 +164,7 @@ nav {
 }
 
 .me-main {
-  // margin: 100px auto;
-  margin-bottom: 100px;
+  margin: 0 auto 100px auto;
   padding-top: 100px;
 
   img {
@@ -407,7 +406,7 @@ footer {
     
 }
 
-
+// large Screen
 @media screen and (min-width: 992px) {
 
   nav .container-fluid {
@@ -441,7 +440,7 @@ footer {
   }
 
   .me-main {
-    margin: 200px auto;
+    margin: 50px auto 100px auto;
   }
 
 
@@ -459,10 +458,11 @@ footer {
   }
 
   .my-services {
-    margin-top: 200px auto;
+    margin: 100px auto 200px auto;
   }
 
   .my-services h2 {
+    padding-top: 100px;
     font-size: 2.2rem;
   }
 
